# OperatorFormer

./: .gitignore  .pdm-python  .tasks  README.md  pyproject.toml  requirements.txt
configs/: train.yaml
configs/callbacks/: default.yaml  model_summary.yaml  noearrlystop.yaml
configs/data/: burges.yaml
configs/experiment/: burgers.yaml  burgers_new.yaml  legion_test.yaml  shanhe_burgers_no_earlystop.yaml  shanhe_burges.yaml  shanhe_burges_tune_optimizer.yaml  shanhe_test.yaml  test.yaml  thinkpad_test.yaml
configs/hydra/: submitit.yaml
configs/local/: shanhe.yaml
configs/logger/: aim.yaml
configs/model/: operatorformer.yaml
configs/trainer/: default.yaml
scripts/: aimup.sh  burgers_1d_exps_lr_nhead.sh  burges_1d_single_test.sh  tensorboard.sh
src/: eval.py  train.py
src/data/: __init__.py  burgers_datamodule.py
src/data/components/: __init__.py  burges.py
src/models/: __init__.py  operatorformer_module.py
src/models/components/: __init__.py  activation.py  dataclass_config.py  functional.py  loss.py  operator_former.py  test.py
src/models/components/attention/: __init__.py  linear_cross_attention.py  linear_self_attention.py  standard_self_attention.py
src/models/components/decoder/: __init__.py  modules.py
src/models/components/encoder/: __init__.py  layers.py  modules.py
src/models/components/normalization/: __init__.py  masked_instancenorm.py  normalization_wrt_domain.py
src/utils/: __init__.py  check_net_nan.py  instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
tests/: test.py  test_for_crosslinearattention.py  test_for_dataclass_dict.py  test_for_hydra.py  test_for_loss_nan.py  test_for_nnsequ.py  test_for_train.py  test_for_train.yaml
