[project]
name = "operatorformer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Chengrui Zhang", email = "jczhang@live.it"},
]
dependencies = []
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
torch = [
    "torch>=2.0.0",
    "lightning>=2.0.0",
    "torchmetrics>=0.11.4",
]
hydra = [
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "hydra-optuna-sweeper==1.2.0",
]
logger = [
    "tensorboardX>=2.6.2.2",
    "aim>=3.19.3",
]
utils = [
    "rootutils>=1.0.7",
    "pre-commit>=3.7.0",
    "rich>=13.7.1",
    "pytest>=8.2.0",
]
core = [
    "einops>=0.8.0",
]
