[project]
name = "operatorformer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Chengrui Zhang", email = "jczhang@live.it"},
]
dependencies = [
    "bcolors==1.0.2",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
torch = [
    "torch>=2.0.0",
    "lightning>=2.0.0",
    "torchmetrics>=0.11.4",
]
hydra = [
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "hydra-optuna-sweeper==1.2.0",
]
logger = [
    "tensorboardX>=2.6.2.2",
    "aim>=3.19.3",
]
utils = [
    "rootutils>=1.0.7",
    "pre-commit>=3.7.0",
    "rich>=13.7.1",
    "pytest>=8.2.0",
]
core = [
    "einops>=0.8.0",
    "torch==2.1.2",
]

[tool.pyright]
root = ["src"]
include = [
    "src"
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
ignore = ["src/oldstuff"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.9"
pythonPlatform = "Linux"

executionEnvironments = [
  { root = "src" }
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["C", "E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]


[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
